# auto-parking

./: Dockerfile  docker-compose.yaml  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 76538932edae_create_vehicle.py  cdbec0af3d5a_create_vehicle_model.py  f9b11a481598_create_drivers_and_enterprises.py
auto_parking/: config.py  main.py
auto_parking/api/: deps.py  router.py
auto_parking/api/schemas/: driver.py  enterprise.py  vehicle.py  vehicle_model.py
auto_parking/api/v1/: drivers.py  enterprises.py  vehicle_models.py  vehicles.py
auto_parking/core/: admin.py  config.py  errors.py  handlers.py  middlewares.py  security.py
auto_parking/db/: admin.py  engine.py  events.py
auto_parking/db/models/: __init__.py  driver.py  enterprise.py  vehicle.py  vehicle_model.py  vehicle_to_driver.py
auto_parking/repo/: driver.py  enterprise.py  vehicle.py
auto_parking/service/: driver.py  enterprise.py  vehicle.py
